--- a/help/index.html
+++ b/help/index.html
@@ -111,7 +111,11 @@
         <tr><td></td>
             <td><a href="./settings/locale.html">Locale</a></td></tr>
         <tr><td></td>
-            <td><a href="./settings/filehash.html">File hashing</a></td></tr>
+            <td><a href="./settings/filehash.html">File Hashing</a></td></tr>
+        <tr><td></td>
+            <td><a href="./settings/itemformsettings.html">Item Form Settings</a></td></tr>
+        <tr><td></td>
+            <td><a href="./settings/drivemappings.html">Drive Mappings</a></td></tr>
         <tr><td><br /></td>
             <td><br /></td></tr>
 
