--- a/homepage/news.html
+++ b/homepage/news.html
@@ -65,6 +65,9 @@
         <span class="content_main_bold">News</span><br><br>
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
+        <br><br><br>
+        <span class="content_main_bold">14/06/2009 ~ Data Crow 3.4.9 has been released</span><br><br>
+        This version contains many improvements. The module wizard enables the user to change a field (with limitations). The mass update is now capable to use all search modes of the online search. The tabs as displayed on the item form are now customizable.
 
         <br><br><br>
         <span class="content_main_bold">02/06/2009 ~ Data Crow 3.4.9 beta has been released</span><br><br>
@@ -242,7 +245,7 @@
 
     <br><br>
 
-    <span class="content_main_bold">02/06/2009<br>Data Crow 3.4.9 beta has been released</span><br>
+    <span class="content_main_bold">14/06/2009<br>Data Crow 3.4.9 has been released</span><br>
     Improved mass update, customizable item form tabs and allows you to change fields using the module wizard.
 
     <br><br>
@@ -271,12 +274,13 @@
     <td colspan="3" class="menu1o">Full version</td>
     </tr>
 
+
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -293,7 +297,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_8_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
