*** empty log message ***

--- a/homepage/links.html
+++ b/homepage/links.html
@@ -116,19 +116,19 @@
 
     <span class="content_main_bold">Latest news</span>
 
+    <br><br>
+
+    <span class="content_main_bold">16/06/2009<br>Technical Documentation</span><br>
+    A developer guide has been made available. Start writing your own plugins and online services today!
 
     <br><br>
 
     <span class="content_main_bold">14/06/2009<br>Data Crow 3.4.9 has been released</span><br>
     Improved mass update, customizable item form tabs and allows you to change fields using the module wizard.
 
-    <br><br>
-
-    <span class="content_main_bold">04/03/2009<br> Data Crow 3.4.8 patch 3 has been released</span><br>
-    This patch enables Mac users to use Data Crow once again and fixes the JTattoo errors.
-
 
     <!-- NEWS END -->
+
 
 
   </td>
