*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -64,7 +64,7 @@
 
         <span class="content_main_bold">Make a donation</span><br><br>
 
-        I hope you enjoy using Data Crow. In case you want to make a donation you can use one of the buttons below. Donations can be done
+        I hope you enjoy using Data Crow. In case you want to make a donation you can use one of the buttons below. Donations can be made
         via Paypal. In case you want your donation to be visible to the public I suggest you use the Sourceforge.net donation method (which also uses Paypal).
 
         <br><br><br>
