--- a/homepage/index.html
+++ b/homepage/index.html
@@ -72,18 +72,18 @@
 
         <br><br>
 
-        Don't strain yourself in organizing your items and trying to keep track of their location, start using <h2>the best cataloger</h2>
-        today. Start using Data Crow.<br><br>
+        Start using <h2>the ultimate cataloger</h2> today!<br><br>
 
+		<li/> Complete <h1>portable</h1>; you can even run it from a USB stick.
         <li/> Highly customizable and feature rich.
         <li/> Audio, software, book, movie and photo <h1>collection cataloger.</h1>
         <li/> Retrieve information from services like Amazon.com and Imdb.com.
         <li/> Optional web module; a web interface and an integrated web server.
-        <li/> Rename your files based on the item information in Data Crow.
-        <li/> Loan management.
+        <li/> Import file information (mp3, divx, xvid, ..)
+        <li/> Loan registration.
         <li/> PDF and HTML reporting.
         <li/> Create new modules to, for example, maintain your stamp collection.
-        <li/> Easily upgrade to newer versions.
+        <li/> <b>New!</b> Available translations: Italian, German, Dutch, English and French.
 
         <br><br>
         Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
@@ -92,7 +92,7 @@
         <br><br>
         <center><a href="http://sourceforge.net/projects/datacrow" target="new"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" border="0" alt="SourceForge.net Logo" /></a><br>
         <i>Data Crow is hosted on sourceforge.net</i><br>
-        Thanks to Bas Uildriks for creating and designing this website!</center>
+        Thanks to <b>Bas Uildriks</b> for creating and designing this website!</center>
 
     </div>
 
