--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,10 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">17/06/2009 ~ Data Crow 3.4.10 has been released</span><br><br>
+        Adds SVG support and stores the first page of PDF files as the front image (book file import).
+
+        <br><br><br>
         <span class="content_main_bold">16/06/2009 ~ Technical Documentation</span><br><br>
         With the new developer guide it is now possible to write your own plugins and online services
 
@@ -248,16 +252,16 @@
 
     <br><br>
 
-    <span class="content_main_bold">16/06/2009<br>Technical Documentation</span><br>
-    A developer guide has been made available. Start writing your own plugins and online services today!
+    <span class="content_main_bold">17/06/2009<br>Data Crow 3.4.10 has been released</span><br>
+    Adds SVG support and stores the first page of PDF files as the front image (book file import).
 
     <br><br>
 
-    <span class="content_main_bold">14/06/2009<br>Data Crow 3.4.9 has been released</span><br>
-    Improved mass update, customizable item form tabs and allows you to change fields using the module wizard.
-
+    <span class="content_main_bold">16/06/2009<br>Technical Documentation</span><br>
+    A developer guide has been made available. Start writing your own plugins and online services today!
 
     <!-- NEWS END -->
+
 
 
   </td>
@@ -282,9 +286,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_10_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_10_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_10_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -301,7 +305,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_9_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_10_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
