*** empty log message ***

--- a/help/settings/regional.html
+++ b/help/settings/regional.html
@@ -3,7 +3,7 @@
         <link href="../datacrow_help.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Locale Settings</h1>
+    <h1>Regional Settings</h1>
 
     <h2>Language</h2>
     Select the language of your choice. A restart is advised for the selection to become fully active. 
