*** empty log message ***

--- a/help/index.html
+++ b/help/index.html
@@ -109,7 +109,7 @@
         <tr><td></td>
             <td><a href="./settings/quickview.html">Quick View</a></td></tr>
         <tr><td></td>
-            <td><a href="./settings/locale.html">Locale</a></td></tr>
+            <td><a href="./settings/regional.html">Regional Settings</a></td></tr>
         <tr><td></td>
             <td><a href="./settings/filehash.html">File Hashing</a></td></tr>
         <tr><td></td>
@@ -124,7 +124,7 @@
         <tr><td></td>
             <td><a href="./tools/auto_numbering.html">Auto Numbering Items</a></td></tr>
         <tr><td></td>
-            <td><a href="./tools/backup_restore.html">Backup & Restore</a></td></tr>
+            <td><a href="./tools/backup_restore.html">Backup &amp; Restore</a></td></tr>
         <tr><td></td>
             <td><a href="./tools/expert_user.html">The Expert User Tool</a></td></tr>
         <tr><td></td>
