*** empty log message ***

--- a/homepage/download.html
+++ b/homepage/download.html
@@ -73,6 +73,13 @@
 
         <br><br>
 
+        <span class="content_main_bold">Data Crow - Patches</span><br><br>
+        <i>Patches require the full version of Data Crow to be installed. Extract the content of the patch to your installation directory, overwrite the existing files.</i><br><br>
+        <li><b>New!</b> Patch 1: <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_patch_1.zip" target="new">3.4.13 patch 1</a></li>
+
+        <br><br>
+
+
         <span class="content_main_bold">Data Crow web module</span><br><br>
         <i>The web module is an extension and should be installed on top of a full Data Crow installation.</i><br><br>
         <li>Web module: Full version (zipped): <a href="http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_zipped.zip" target="new">1.3</a></li>
@@ -101,14 +108,14 @@
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
+	<span class="content_main_bold">26/07/2009<br>Data Crow 3.4.13 patch 1 has been released</span><br><br>
+	This patch fixes a couple of issues related to the mass update and the file import functionality.
+
+	<br><br>
 
 	<span class="content_main_bold">25/07/2009<br>Data Crow 3.4.13 has been released</span><br>
 	This release contains fixes for the tree panels / grouping pane and the mass update functionality.
 
-	<br><br>
-
-    <span class="content_main_bold">19/07/2009<br>Data Crow 3.4.12 has been released</span><br>
-	This maintenance release upgrades the file structure tree and fixes several small bugs.
 
     <!-- NEWS END -->
 
