--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -90,14 +90,14 @@
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
+	<span class="content_main_bold">26/07/2009<br>Data Crow 3.4.13 patch 1 has been released</span><br><br>
+	This patch fixes a couple of issues related to the mass update and the file import functionality.
+
+	<br><br>
 
 	<span class="content_main_bold">25/07/2009<br>Data Crow 3.4.13 has been released</span><br>
 	This release contains fixes for the tree panels / grouping pane and the mass update functionality.
 
-	<br><br>
-
-    <span class="content_main_bold">19/07/2009<br>Data Crow 3.4.12 has been released</span><br>
-	This maintenance release upgrades the file structure tree and fixes several small bugs.
 
     <!-- NEWS END -->
 
