*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -95,8 +95,8 @@
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
-	<span class="content_main_bold">26/07/2009<br>Data Crow 3.4.13 patch 1 has been released</span><br><br>
-	This patch fixes a couple of issues related to the mass update and the file import functionality.
+	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br><br>
+	This patch fixes a couple of issues related to views and file import functionality.
 
 	<br><br>
 
