--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,10 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">03/08/2009 ~ Data Crow 3.4.13 patch 2 has been released</span><br><br>
+        This patch fixes a couple of issues related to views and file import functionality.
+
+        <br><br><br>
         <span class="content_main_bold">26/07/2009 ~ Data Crow 3.4.13 patch 1 has been released</span><br><br>
 		This patch fixes a couple of issues related to the mass update and the file import functionality.
 
@@ -269,8 +273,8 @@
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
-	<span class="content_main_bold">26/07/2009<br>Data Crow 3.4.13 patch 1 has been released</span><br><br>
-	This patch fixes a couple of issues related to the mass update and the file import functionality.
+	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br><br>
+	This patch fixes a couple of issues related to views and file import functionality.
 
 	<br><br>
 
