*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -74,7 +74,7 @@
 
         Start using <h2>the ultimate cataloger</h2> today!<br><br>
 
-		<li/> Complete <h1>portable</h1>; you can even run it from a USB stick.
+		<li/> Completely <h1>portable</h1>; you can even run it from a USB stick.
         <li/> Highly customizable and feature rich.
         <li/> Audio, software, book, movie and photo <h1>collection cataloger.</h1>
         <li/> Retrieve information from services like Amazon.com and Imdb.com.
