--- a/help/general/featurelist.html
+++ b/help/general/featurelist.html
@@ -5,21 +5,16 @@
   <body>
     	<h1><a id="dc.Introduction.FeatureList"></a>Features List</h1>
 		<br>
-		<li>Out of the box experience</li>
-		<li>Audio, software, book, movie and photo collections organizer</li>
-		<li>Customizable UI: select a skin, change the fonts, customize views and much more</td></tr></li>
-		<li>Create your own module from within Data Crow!</li>
-		<li>Everything in Data Crow can be modified to your own needs! Add your own categories, genres, states, ..</li>
-		<li>Rename your files based on the item information in Data Crow</li>
-		<li>Advanced user management</li>
-		<li>Keep track of loaned items using the simple loan management system</li>
-		<li>Use online services like Amazon.com, Imdb.com, Musicbrainz.org, and many others, to retrieve information</li>
-		<li>The internal powerful <a href="http://rsb.info.nih.gov/ij/">image editor</a> enables you to manipulate any image</li>
-		<li>Create pdf and html reports. Create your own reports by supplying new XSLT documents</li>
-		<li>Use templates to fill your default values</li>
-		<li>Mass update your items</li>
-		<li>Auto number your items using the auto numbering functionality</li>
-		<li>Create a backup of your items and settings by using the "backup & restore" functionality</li>
-		<li>Easily upgrade to newer versions of Data Crow</li>  
+		<li> Completely portable; you can even run it from a USB stick.
+        <li> Highly customizable and feature rich.
+        <li> Audio, software, book, movie and photo collection cataloger.
+        <li> Retrieve information from services like Amazon.com and Imdb.com.
+        <li> Optional web module; a web interface and an integrated web server.
+        <li> Import file information (mp3, divx, xvid, ..)
+        <li> Loan registration.
+        <li> PDF and HTML reporting.
+        <li> Create new modules to, for example, maintain your stamp collection.
+        <li> Available translations: Italian, German, Dutch, English and French.
+
 	</body>
 </html>
