--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -157,14 +157,14 @@
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
-	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br><br>
-	This patch fixes a couple of issues related to views and file import functionality.
+
+	<span class="content_main_bold">16/08/2009<br>Data Crow 3.4.14 has been released</span><br>
+	The startup time has been dramatically reduced and there are two new migration tools to play with: the item import and export wizard.
 
 	<br><br>
 
-	<span class="content_main_bold">25/07/2009<br>Data Crow 3.4.13 has been released</span><br>
-	This release contains fixes for the tree panels / grouping pane and the mass update functionality.
-
+	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br>
+	This patch fixes a couple of issues related to views and file import functionality.
 
     <!-- NEWS END -->
 
@@ -194,9 +194,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -213,7 +213,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
