--- a/homepage/news.html
+++ b/homepage/news.html
@@ -66,6 +66,11 @@
         This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
 
         <br><br><br>
+        <span class="content_main_bold">16/08/2009 ~ Data Crow 3.4.14 has been released</span><br><br>
+        With this release the <b>startup</b> time of Data Crow has been <b>dramatically improved</b>. Furthermore you will find the item export
+        and import wizards to be very convenient for migration purposes and to export single items and share these with your friends and family.
+
+        <br><br><br>
         <span class="content_main_bold">03/08/2009 ~ Data Crow 3.4.13 patch 2 has been released</span><br><br>
         This patch fixes a couple of issues related to views and file import functionality.
 
@@ -273,14 +278,14 @@
     <span class="content_main_bold">Latest news</span>
 
 	<br><br>
-	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br><br>
-	This patch fixes a couple of issues related to views and file import functionality.
+
+	<span class="content_main_bold">16/08/2009<br>Data Crow 3.4.14 has been released</span><br>
+	The startup time has been dramatically reduced and there are two new migration tools to play with: the item import and export wizard.
 
 	<br><br>
 
-	<span class="content_main_bold">25/07/2009<br>Data Crow 3.4.13 has been released</span><br>
-	This release contains fixes for the tree panels / grouping pane and the mass update functionality.
-
+	<span class="content_main_bold">03/08/2009<br>Data Crow 3.4.13 patch 2 has been released</span><br>
+	This patch fixes a couple of issues related to views and file import functionality.
 
     <!-- NEWS END -->
 
@@ -306,9 +311,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -325,7 +330,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_13_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_14_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
