*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -68,7 +68,7 @@
         <br><br><br>
         <span class="content_main_bold">17/08/2009 ~ Data Crow 3.4.15 has been released</span><br><br>
         The 3.4.14 release was unfortunately incorrect. It contained an incorrected version of the item form.
-        The release fixes all these 3.4.14 related issues. Sorry for the inconvenience. You are all entitled to a free copy of Data Crow!
+        This release fixes all these 3.4.14 related issues. Sorry for the inconvenience. You are all entitled to a free copy of Data Crow!
 
         <br><br><br>
         <span class="content_main_bold">16/08/2009 ~ Data Crow 3.4.14 has been released</span><br><br>
