*** empty log message ***

--- a/homepage/news.html
+++ b/homepage/news.html
@@ -63,7 +63,14 @@
     <div class="scrollable_div">
 
         <span class="content_main_bold">News</span><br><br>
-        This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release, can be found <a href="changelog.txt" target="new">here</a>.
+        This section contains news about new releases and other Data Crow related news. The change log text file, which is always updated for every release,
+        can be found <a href="changelog.txt" target="new">here</a>.
+
+        <br><br><br>
+        <span class="content_main_bold">18/08/2009 ~ Data Crow 3.4.16 has been released</span><br><br>
+        It's a disaster! Just after I made a panic release yesterday I find myself yet again releasing a new version.
+        Here is why: the Amazon service API was changed just after I released yesterdays version. I probably should have kept track of all
+        there development plans.. Another day another release. Enjoy!
 
         <br><br><br>
         <span class="content_main_bold">17/08/2009 ~ Data Crow 3.4.15 has been released</span><br><br>
@@ -284,13 +291,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">17/08/2009<br>Data Crow 3.4.15 has been released</span><br>
-	A maintenance release containing fixes for the incorrect 3.4.14 version. Sorry for the inconvenience.
+	<span class="content_main_bold">18/08/2009<br>Data Crow 3.4.16 has been released</span><br>
+	The Amazon online search did no longer work. This version has been adopted to deal with the new Amazon service functionality.
 
 	<br><br>
 
-	<span class="content_main_bold">16/08/2009<br>Data Crow 3.4.14 has been released</span><br>
-	The startup time has been dramatically reduced and there are two new migration tools to play with: the item import and export wizard.
+	<span class="content_main_bold">17/08/2009<br>Data Crow 3.4.15 has been released</span><br>
+	A maintenance release containing fixes for the incorrect 3.4.14 version. Sorry for the inconvenience.
 
     <!-- NEWS END -->
 
@@ -316,9 +323,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -335,7 +342,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_15_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_16_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
