*** empty log message ***

--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -87,6 +87,29 @@
             permissions.
 
 			<br><br><br>
+            <span class="content_main_bold">Is Data Crow protable?</span><br><br>
+            Yes, it is. Data Crow does not leave any dropping behind after uninstalling it. Data Crow does not rely on the
+            registry of Windows or write any files other then to the sub folders of the Data Crow installation directory.
+            You do not even have to use the installer, you can simply download the zipped version and unpack this to the
+            desired location, Another nice thing is that the web server (which comes with the web module) is also completely
+            portable allowing you to run a web server from your USB stick!.
+
+			<br><br><br>
+            <span class="content_main_bold">How do I upgrade my current version?</span><br><br>
+            You have two methods available. The first method is to install the latest version on top of your current
+            installation. You will have to be aware of the upgrade path (see the readme/datacrow/readme.txt file).
+            The second method is the safest: create a backup using the Backup &amp; Restore utility.
+            Uninstall (delete) the current version. Install the latest version. Restore the backup you created.
+            The restore utility will check and advise on the upgrade path ensuring you will not end up with a
+            corrupted version of Data Crow.
+
+			<br><br><br>
+            <span class="content_main_bold">I want to merge the items from several installations</span><br><br>
+            With the latest version this is possible by using the Item Export and the Item Import utility.
+            You can store the selected (or all) items to a XML file which can be imported on any other system.
+            This is the most reliable way to migrate your items.
+
+			<br><br><br>
             <span class="content_main_bold">Nice reports but I want something different</span><br><br>
             The reports in Data Crow are based on templates which are easily modified. In case the existing reports
             are not suitable for your needs try to create a new one. I have written a short manual on this
