--- a/homepage/links.html
+++ b/homepage/links.html
@@ -77,7 +77,8 @@
         <br><br><br>
 
 		<span class="content_main_bold">Data Crow Material</span><br><br>
-		<li/><a href="http://www.downloadtube.com/Data-Crow-demo-installation-windows.html" target="new">DownloadTube: Installation and Usage Video</a>
+		<li/><a href="http://www.downloadtube.com/Data-Crow-demo-installation-windows.html" target="new">DownloadTube: Data Crow Instruction Video</a>
+		<li/><a href="http://portableapps.com/node/20087" target="new">PortableApps: Portable Data Crow Distribution</a>
 
         <br><br><br>
 
