--- a/homepage/links.html
+++ b/homepage/links.html
@@ -62,6 +62,7 @@
 
     <div class="scrollable_div">
 
+
         <span class="content_main_bold">Data Crow Forum</span><br><br>
         <li/><a href="http://sourceforge.net/forum/forum.php?forum_id=650036" target="new">General Discussion</a>
         <li/><a href="http://sourceforge.net/forum/forum.php?forum_id=650035" target="new">I Need Help</a>
@@ -82,8 +83,26 @@
 
         <br><br><br>
 
+        <span class="content_main_bold">Awards</span><br><br>
+    	<a target="_blank" href="http://www.downloadtube.com/Windows/Others/Data-Crow-download.html"><img src="http://www.downloadtube.com/images/top_award.gif" border="0" alt="Data Crow video tutorial at downloadtube.com"></a>
+		<a href="http://www.freedownloadmanager.org/downloads/Data_Crow_57291_p/" target="_blank"><img width="111" height="90" alt="Data Crow Received &quot;User Choice&quot; Award at Free Download Manager" border="0" src="http://www.freedownloadmanager.org/awards/userchoice.gif"></a>
+		<a href="http://www.supershareware.com/info/data-crow.html"><img src="http://www.supershareware.com/images/awards/awards_b_5.jpg" alt="Data Crow 5 Stars Award" /></a>
+
+		<br><br><br>
+
+		<a href="http://www.softpedia.com/get/Others/File-CD-DVD-Catalog/Data-Crow.shtml"><img align="left" src="http://www.softpedia.com/base_img/softpedia_free_award_f.gif" style="margin-right: 10px;" /></a>
+
+
+
+    	<br><br><br>
+    	<br><br><br>
+    	<br><br><br>
+    	<br><br><br>
+
+
         <span class="content_main_bold">Sites mentioning Data Crow</span><br><br>
         <li/><a href="http://www.downloadtube.com/Windows/Others/Data-Crow-download.html" target="new">DownloadTube</a>
+        <li/><a href="http://www.bestfreewaredownload.com/">Best Freeware Download</a>
         <li/><a href="http://www.hitechlegion.com/reviews/software/390-datacrow?showall=1" target="new">HiTechLegion</a>
         <li/><a href="http://www.freewarebb.com/Data-Crow-321-file173.html" target="new">FreewareBB</a>
         <li/><a href="http://linux.softpedia.com/get/Information-Management/Data-Crow-18608.shtml" target="new">Softpedia</a>
@@ -97,7 +116,6 @@
         <li/><a href="http://www.java-forums.org/java-announcements/7957-data-crow-3-2-1-a.html">Java Forums</a>
         <li/><a href="http://www.essential-freebies.de/board/viewtopic.php?p=93007">Essential Freebies</a>
         <li/><a href="http://www.sixfiles.com/dbase/files/datacrow-net-data-crow.html">SixFiles.com</a>
-        <li/><a href="http://www.bestfreewaredownload.com/">Best Freeware Download</a>
         <li/><a href="http://www.sofotex.com/Data-Crow-download_L95644.html">Sofotex</a>
 		<li/><a href="http://www.softplatz.com/Soft/Home-Hobby/Cataloging/Data-Crow.html">Softplatz</a>
 		<li/><a href="http://www.supershareware.com/info/data-crow.html">Super Shareware</a>
