*** empty log message ***

--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -87,11 +87,11 @@
             permissions.
 
 			<br><br><br>
-            <span class="content_main_bold">Is Data Crow protable?</span><br><br>
-            Yes, it is. Data Crow does not leave any dropping behind after uninstalling it. Data Crow does not rely on the
-            registry of Windows or write any files other then to the sub folders of the Data Crow installation directory.
-            You do not even have to use the installer, you can simply download the zipped version and unpack this to the
-            desired location, Another nice thing is that the web server (which comes with the web module) is also completely
+            <span class="content_main_bold">Is Data Crow portable?</span><br><br>
+            Yes, it is. Data Crow does not leave anything behind after uninstalling it. Data Crow does not rely on the
+            registry and only writes files to the sub folders of the Data Crow installation directory.
+            You do not even have to use the installer. You can simply download the zipped version and unpack this in the
+            desired location. Another nice thing is that the web server (which comes with the web module) is also completely
             portable allowing you to run a web server from your USB stick!.
 
 			<br><br><br>
@@ -105,7 +105,7 @@
 
 			<br><br><br>
             <span class="content_main_bold">I want to merge the items from several installations</span><br><br>
-            With the latest version this is possible by using the Item Export and the Item Import utility.
+            With the latest version this is possible by using the Item Export and the Item Import wizards.
             You can store the selected (or all) items to a XML file which can be imported on any other system.
             This is the most reliable way to migrate your items.
 
