*** empty log message ***

--- a/homepage/history.html
+++ b/homepage/history.html
@@ -105,13 +105,13 @@
 
 	<br><br>
 
-	<span class="content_main_bold">25/08/2009<br>Data Crow 3.4.17 has been released</span><br>
-	A maintenance release: the IMDB search has been optimized and the CSV import has been improved.
+	<span class="content_main_bold">07/09/2009<br>Data Crow 3.4.18 has been released</span><br>
+	This release contains many minor fixes and small improvements but also something new; from now on you can choose to be notified of new releases.
 
 	<br><br>
 
-	<span class="content_main_bold">18/08/2009<br>Data Crow 3.4.16 has been released</span><br>
-	The Amazon online search did no longer work. This version has been adopted to deal with the new Amazon service functionality.
+	<span class="content_main_bold">25/08/2009<br>Data Crow 3.4.17 has been released</span><br>
+	A maintenance release: the IMDB search has been optimized and the CSV import has been improved.
 
     <!-- NEWS END -->
 
@@ -139,9 +139,9 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_18_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_18_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_18_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -158,7 +158,7 @@
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_17_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_18_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
