*** empty log message ***

--- a/help.html
+++ b/help.html
@@ -89,7 +89,7 @@
         <tr><td></td>
             <td><a href="./help/settings/tableview.html">Table View Settings</a></td></tr>
         <tr><td></td>
-            <td><a href="./help/settings/fields.html">Field Settings</a></td></tr>
+            <td><a href="./help/settings/fields.html">General Field Settings</a></td></tr>
         <tr><td></td>
             <td><a href="./help/settings/webfields.html">Web Field Settings</a></td></tr>
         <tr><td></td>
