--- a/help/items/itemform.html
+++ b/help/items/itemform.html
@@ -21,7 +21,7 @@
     Via the "edit" menu an image can edited or deleted. There are several options for editing such as rotating and sharpening.
 
     <h2>Online Update</h2>
-	Not all modules offer this functionality. If this feature is available then there is a "Update" in the lower part of the item form.  
+	Not all modules offer this functionality. If this feature is available then there is an "Update" button in the lower part of the item form.  
 	The Online Update allows you to find (and use) information about your item using an online service. More on this is explained <a href="../onlinesearch/onlinesearch.html">here</a>.
 
     <h2>Attach File Info</h2>
