--- a/help/settings/fields.html
+++ b/help/settings/fields.html
@@ -4,20 +4,23 @@
   </head>
   <body>
     
-    <h1>Field Settings</h1>
+    <h1>General Field Settings</h1>
     Via this dialog the order of the fields and which fields are used can be indicated. 
 
     <h2>Renaming a field</h2>
-    The label of each field can be changed. On the left the original label name is displayed. This is the default value. A new label value can be entered in the "label" column. Press "save changes" to save and apply the field settings.
+    The label of each field can be changed. On the left the original label name is displayed. This is the default value. A new label value can be entered in the "Custom Label" column. Press "save changes" to save and apply the field settings.
 
     <h2>Marking a field as required</h2>
-    You can mark a field as a required field. This field must always be filled when saving. The item  will only be saved when all the required fields have been filled. Furthermore the combination of the required fields will be used to check if the item already exists <a href="../settings/general.html">(more about this)</a>.
+    You can mark a field as a required field. This field must always be filled when saving. The item  will only be saved when all the required fields have been filled.
 
-    <h2>Disabled</h2>
+    <h2>Enabled</h2>
     Setting a field to disabled will not only hide the field but also disallows Data Crow to use this field. Note that for one field the enabled setting is completely ignored, namely for the ID field.
 
     <h2>Descriptive</h2>
     When a field is marked as descriptive (or a combination of several fields) the value of this field is used to represent the items.
+
+    <h2>Key</h2>
+    The combination of the key fields will be used to check if the item already exists <a href="../settings/general.html">(more about this)</a>.
 
     <h2>Adding your own fields</h2>
     There are 5 fields which are by default disabled. There are 2 short text fields, one long text (4000+ characters) and 2 numeric fields. These can be activated by checking the enabled checkbox. You can rename them to anything you like (see previous paragraph). Don't forget to make them visible!
