--- a/help/settings/general.html
+++ b/help/settings/general.html
@@ -13,7 +13,7 @@
     Define how the name of persons should be displayed by default.
 
 	<h2>Check for value uniqueness upon saving</h2>
-	Data Crow will check if the item is unique before it is saved. Uniqueness is determined by the required field values. If the item is not unique it will not be saved and a message will be displayed.<br>
+	Data Crow will check if the item is unique before it is saved. Uniqueness is determined by the values of key field (<a href="fields.html">more about this). If the item is not unique it will not be saved and a message will be displayed.<br>
 	This option is enabled by default and I do not recommend turning it off
 
 	<h2>Check for required fields</h2>
@@ -26,6 +26,9 @@
 
 	<h2>Delete picture file after adding it to an item</h2>
 	Deletes the picture from your disk after it has been added to the Data Crow database</td>
+	
+    <h2>Check for new versions on startup</h2>
+    Checks whether there is a new release of Data Crow available (on startup).</td>
 
   </body>
 </html>
