*** empty log message ***

--- a/help/settings/directoriesasdrives.html
+++ b/help/settings/directoriesasdrives.html
@@ -7,7 +7,7 @@
     <h1>Directories as Drives</h1>
     
     Not all platforms have or know the concept of a drive. To make your life easier within Data Crow (especially when working with the Drive Manager)  
-    you can define which directories should be considered as drives. 
-    
+    you can define which directories should be considered as drives. <br>
+    Data Crow needs to be restarted for the changes to become apparent. 
   </body>
 </html>
