*** empty log message ***

--- a/help/webserver/webserver.html
+++ b/help/webserver/webserver.html
@@ -7,9 +7,7 @@
     
     <p>
     Using this dialog the web server can be configured and started.
-    The web server is only available after installing the web module.
-    After the web module has been installed a new menu will appear in the menu bar
-    called &quot;Web Server&quot;. The web server dialog can be opened from there.
+    The web server dialog can be opened from the web server menu.
     </p>
     
     <h2>Web Server settings</h2>
