*** empty log message ***

--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -95,6 +95,23 @@
         <i>Data Crow is a Java application, so you'll need to have Java installed on your machine before you download the most recent production version's binary zipfile. Unzip the file in a directory where you want Data Crow to live, and start Data Crow by running java -jar datacrow.jar. You might notice that it takes Data Crow a bit of time to start, even on a relatively fast machine. I'm running it on an AMD X2 4200+ system with 4GB of RAM and it still seems slow to start. However, once it's loaded, Data Crow is respectably fast...</i>
         <a href="http://www.linux.com/feature/59954">full text</a>
 
+		<br><br><br>
+
+        <span class="content_main_bold">Awards</span><br><br>
+    	<a target="_blank" href="http://www.downloadtube.com/Windows/Others/Data-Crow-download.html"><img src="http://www.downloadtube.com/images/top_award.gif" border="0" alt="Data Crow video tutorial at downloadtube.com"></a>
+		<a href="http://www.freedownloadmanager.org/downloads/Data_Crow_57291_p/" target="_blank"><img width="111" height="90" alt="Data Crow Received &quot;User Choice&quot; Award at Free Download Manager" border="0" src="http://www.freedownloadmanager.org/awards/userchoice.gif"></a>
+		<a href="http://www.supershareware.com/info/data-crow.html"><img src="http://www.supershareware.com/images/awards/awards_b_5.jpg" alt="Data Crow 5 Stars Award" /></a>
+
+		<br><br><br>
+
+		<a href="http://www.softpedia.com/get/Others/File-CD-DVD-Catalog/Data-Crow.shtml"><img align="left" src="http://www.softpedia.com/base_img/softpedia_free_award_f.gif" style="margin-right: 10px;" /></a>
+
+    	<br><br><br>
+    	<br><br><br>
+    	<br><br><br>
+    	<br><br><br>
+
+
     </div>
 
     </td>
@@ -108,8 +125,8 @@
 
 	<br><br>
 
-    <span class="content_main_bold">14/09/2009<br>Data Crow 3.4.20 HAS BEEN RECALLED</span><br><br>
-    The latest version, 3.4.20, contains a serious flaw. If you are using this version I urge you to install version 3.4.19 and restore your old backup.
+    <span class="content_main_bold">20/09/2009<br>Data Crow 3.5 has been released</span><br>
+    The 3.5 version improves the ISBN search, adds a language and country module and improves the Amazon.com and IMDB.com online services.
 
 	<br><br>
 
@@ -141,26 +158,26 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu8o">Web module</td>
+    <td colspan="3" class="menu8o">Documents</td>
     </tr>
   <tr>
-    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
-    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
-    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+    <td class="menu7" onClick=window.top.location.href='http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_developer_guide.pdf' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Developer Guide</td>
+    <td class="menu6" onClick=window.top.location.href='http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Creating modules</td>
+    <td class="menu5" onClick=window.top.location.href='http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_a_report.pdf' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Custom reports</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
