--- a/homepage/index.html
+++ b/homepage/index.html
@@ -107,8 +107,8 @@
 
 	<br><br>
 
-    <span class="content_main_bold">14/09/2009<br>Data Crow 3.4.20 HAS BEEN RECALLED</span><br><br>
-    The latest version, 3.4.20, contains a serious flaw. If you are using this version I urge you to install version 3.4.19 and restore your old backup.
+    <span class="content_main_bold">20/09/2009<br>Data Crow 3.5 has been released</span><br>
+    The 3.5 version improves the ISBN search, adds a language and country module and improves the Amazon.com and IMDB.com online services.
 
 	<br><br>
 
@@ -141,26 +141,26 @@
   <!-- DOWNLOAD -->
 
   <tr>
-    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_windows_installer.zip' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu8o">Web module</td>
+    <td colspan="3" class="menu8o">Documents</td>
     </tr>
   <tr>
-    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
-    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
-    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_3_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+    <td class="menu7" onClick=window.top.location.href='http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_developer_guide.pdf' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Developer Guide</td>
+    <td class="menu6" onClick=window.top.location.href='http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_modules.pdf' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Creating modules</td>
+    <td class="menu5" onClick=window.top.location.href='http://heanet.dl.sourceforge.net/sourceforge/datacrow/data_crow_howto_create_a_report.pdf' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Custom reports</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_19_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_5_0_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
   </tr>
 
   <!-- END DOWNLOAD -->
