*** empty log message ***

--- a/help/settings/filehash.html
+++ b/help/settings/filehash.html
@@ -12,6 +12,7 @@
 	
 	    <h2>Create hashes for files smaller than</h2>
 	    For performance reasons Data Crow only creates hashes for files smaller than a certain size. 
-	    Here you can tweak this setting.
+	    Here you can tweak this setting. Setting this value to 0, or leaving this value blank will 
+	    enable parsing files of any size.
   </body>
 </html>
